Exercise fully completed

--- a/Copie_de_S1_1_Python_Fundamentals.ipynb
+++ b/Copie_de_S1_1_Python_Fundamentals.ipynb
@@ -12,6 +12,7 @@
         "5_q3a6nkGyUT",
         "vbyKoS8kFhlk",
         "FVah8r57G2-i",
+        "u3ByfxgWGorm",
         "RfEc-2m40PtE",
         "iFMRNBHZ0qtr",
         "kjsvKcre6T36",
@@ -1956,7 +1957,7 @@
       "metadata": {
         "id": "__NfaA2tOzBX"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1966,10 +1967,25 @@
         "h"
       ],
       "metadata": {
-        "id": "iOMeB_loQlmQ"
+        "id": "iOMeB_loQlmQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e58e6efc-6f40-46b0-eb02-aa7ac213aab0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.Hurricane at 0x7f66b7b4c5d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1977,10 +1993,29 @@
         "h.name"
       ],
       "metadata": {
-        "id": "wsNidUUXQwHP"
+        "id": "wsNidUUXQwHP",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "17fabd28-2b42-4d7a-de33-fc649366d723"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'FLORENCE'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1988,10 +2023,28 @@
         "h = Hurricane('Ida', 5, 300)"
       ],
       "metadata": {
-        "id": "RyjkbiLyQ_Og"
+        "id": "RyjkbiLyQ_Og",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 270
+        },
+        "outputId": "6fad72e4-bcf2-4e57-8afb-95ed0473a570"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-0abd82467bc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHurricane\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Ida'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-1-96b66d29700e>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, category, lon)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlon\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m180\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlon\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m180\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Invalid lon {lon}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Invalid lon 300"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2021,7 +2074,7 @@
       "metadata": {
         "id": "ZTprXXYDRMbq"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2031,10 +2084,25 @@
         "f.is_dangerous()"
       ],
       "metadata": {
-        "id": "7khh5034RReF"
+        "id": "7khh5034RReF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "754d6c60-e8ff-4556-99c7-4bcf178b7d47"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2849,35 +2917,80 @@
     {
       "cell_type": "code",
       "source": [
-        "# Change your class here"
+        "# Change your class here\n",
+        "class planet:\n",
+        "    \n",
+        "    def __init__(self, name, mass):\n",
+        "        self.name = name\n",
+        "        self.mass = mass\n",
+        "        \n",
+        "        if mass < 1898:\n",
+        "          self.mass = True\n",
+        "  \n",
+        "    def is_light(self):\n",
+        "      return self.mass is True\n"
       ],
       "metadata": {
         "id": "cNoNKYVZpL6x"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Ask Python whether the Earth is lighter than Jupiter"
+        "# Ask Python whether the Earth is lighter than Jupiter\n",
+        "Earth = planet(\"Earth\", 5.97)\n",
+        "Earth.is_light()"
       ],
       "metadata": {
-        "id": "kONFRjXspOd-"
+        "id": "kONFRjXspOd-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c782b1be-dcdc-4038-bdfa-514442d1c77e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Ask Python whether Jupiter is lighter than itself"
+        "# Ask Python whether Jupiter is lighter than itself\n",
+        "Jupiter = planet(\"Jupiter\", 1898)\n",
+        "Jupiter.is_light()"
       ],
       "metadata": {
-        "id": "E4vyhiDPpUhL"
+        "id": "E4vyhiDPpUhL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d67bdb0b-475f-4a7b-a6bb-cc7cfd5b001e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     }
   ]
 }
