S2_2 Last question to do still

--- a/S2_2_Training_Models.ipynb
+++ b/S2_2_Training_Models.ipynb
@@ -6,6 +6,7 @@
       "name": "Copie de S2_2_Training_Models.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "S_OXSp49IOF2"
       },
@@ -154,9 +155,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5555ce53-99ed-48d0-fead-1850fff93bd2"
+        "outputId": "4c6332f1-c00c-4f94-ac14-b53f7760e74f"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,9 +294,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "ed740f32-8b64-490f-90df-b959043200dc"
+        "outputId": "7431fe29-00b3-47b9-e377-eb7ae6851cfb"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,19 +340,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdfb1999-66d9-49df-98a4-461fe7cb9196"
+        "outputId": "8d530f57-a0a6-4dbe-8cab-079ff0f7669d"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.69736803, 0.09417735, 0.97562235])"
+              "array([0.77395605, 0.43887844, 0.85859792])"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -365,19 +366,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FT3BdWhUzYlJ",
-        "outputId": "b7551370-7eb5-4fec-dea9-047df7fd4978"
+        "outputId": "6996132e-cf64-403f-8432-fc4a547f15d6"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6973680290593639"
+              "0.7739560485559633"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -449,7 +450,7 @@
       "metadata": {
         "id": "H5fDeL36EauO"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -538,125 +539,47 @@
       "source": [
         "# Prepare the X_with_bias matrix\n",
         "X_with_bias = np.insert(bin_X,0,1,axis=1)\n",
-        "X_with_bias"
+        "X_with_bias\n",
+        "\n",
+        "teta[0]*X_with_bias[:,0]"
       ],
       "metadata": {
         "id": "3b2oOJ5WKn5m",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac30db7e-3afe-410e-ad5b-d1af3082edb9"
+        "outputId": "956b8c26-3d14-44e7-8ec2-3d9426cf3d40"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1. , 4.7, 1.4],\n",
-              "       [1. , 4.5, 1.5],\n",
-              "       [1. , 4.9, 1.5],\n",
-              "       [1. , 4. , 1.3],\n",
-              "       [1. , 4.6, 1.5],\n",
-              "       [1. , 4.5, 1.3],\n",
-              "       [1. , 4.7, 1.6],\n",
-              "       [1. , 3.3, 1. ],\n",
-              "       [1. , 4.6, 1.3],\n",
-              "       [1. , 3.9, 1.4],\n",
-              "       [1. , 3.5, 1. ],\n",
-              "       [1. , 4.2, 1.5],\n",
-              "       [1. , 4. , 1. ],\n",
-              "       [1. , 4.7, 1.4],\n",
-              "       [1. , 3.6, 1.3],\n",
-              "       [1. , 4.4, 1.4],\n",
-              "       [1. , 4.5, 1.5],\n",
-              "       [1. , 4.1, 1. ],\n",
-              "       [1. , 4.5, 1.5],\n",
-              "       [1. , 3.9, 1.1],\n",
-              "       [1. , 4.8, 1.8],\n",
-              "       [1. , 4. , 1.3],\n",
-              "       [1. , 4.9, 1.5],\n",
-              "       [1. , 4.7, 1.2],\n",
-              "       [1. , 4.3, 1.3],\n",
-              "       [1. , 4.4, 1.4],\n",
-              "       [1. , 4.8, 1.4],\n",
-              "       [1. , 5. , 1.7],\n",
-              "       [1. , 4.5, 1.5],\n",
-              "       [1. , 3.5, 1. ],\n",
-              "       [1. , 3.8, 1.1],\n",
-              "       [1. , 3.7, 1. ],\n",
-              "       [1. , 3.9, 1.2],\n",
-              "       [1. , 5.1, 1.6],\n",
-              "       [1. , 4.5, 1.5],\n",
-              "       [1. , 4.5, 1.6],\n",
-              "       [1. , 4.7, 1.5],\n",
-              "       [1. , 4.4, 1.3],\n",
-              "       [1. , 4.1, 1.3],\n",
-              "       [1. , 4. , 1.3],\n",
-              "       [1. , 4.4, 1.2],\n",
-              "       [1. , 4.6, 1.4],\n",
-              "       [1. , 4. , 1.2],\n",
-              "       [1. , 3.3, 1. ],\n",
-              "       [1. , 4.2, 1.3],\n",
-              "       [1. , 4.2, 1.2],\n",
-              "       [1. , 4.2, 1.3],\n",
-              "       [1. , 4.3, 1.3],\n",
-              "       [1. , 3. , 1.1],\n",
-              "       [1. , 4.1, 1.3],\n",
-              "       [1. , 6. , 2.5],\n",
-              "       [1. , 5.1, 1.9],\n",
-              "       [1. , 5.9, 2.1],\n",
-              "       [1. , 5.6, 1.8],\n",
-              "       [1. , 5.8, 2.2],\n",
-              "       [1. , 6.6, 2.1],\n",
-              "       [1. , 4.5, 1.7],\n",
-              "       [1. , 6.3, 1.8],\n",
-              "       [1. , 5.8, 1.8],\n",
-              "       [1. , 6.1, 2.5],\n",
-              "       [1. , 5.1, 2. ],\n",
-              "       [1. , 5.3, 1.9],\n",
-              "       [1. , 5.5, 2.1],\n",
-              "       [1. , 5. , 2. ],\n",
-              "       [1. , 5.1, 2.4],\n",
-              "       [1. , 5.3, 2.3],\n",
-              "       [1. , 5.5, 1.8],\n",
-              "       [1. , 6.7, 2.2],\n",
-              "       [1. , 6.9, 2.3],\n",
-              "       [1. , 5. , 1.5],\n",
-              "       [1. , 5.7, 2.3],\n",
-              "       [1. , 4.9, 2. ],\n",
-              "       [1. , 6.7, 2. ],\n",
-              "       [1. , 4.9, 1.8],\n",
-              "       [1. , 5.7, 2.1],\n",
-              "       [1. , 6. , 1.8],\n",
-              "       [1. , 4.8, 1.8],\n",
-              "       [1. , 4.9, 1.8],\n",
-              "       [1. , 5.6, 2.1],\n",
-              "       [1. , 5.8, 1.6],\n",
-              "       [1. , 6.1, 1.9],\n",
-              "       [1. , 6.4, 2. ],\n",
-              "       [1. , 5.6, 2.2],\n",
-              "       [1. , 5.1, 1.5],\n",
-              "       [1. , 5.6, 1.4],\n",
-              "       [1. , 6.1, 2.3],\n",
-              "       [1. , 5.6, 2.4],\n",
-              "       [1. , 5.5, 1.8],\n",
-              "       [1. , 4.8, 1.8],\n",
-              "       [1. , 5.4, 2.1],\n",
-              "       [1. , 5.6, 2.4],\n",
-              "       [1. , 5.1, 2.3],\n",
-              "       [1. , 5.1, 1.9],\n",
-              "       [1. , 5.9, 2.3],\n",
-              "       [1. , 5.7, 2.5],\n",
-              "       [1. , 5.2, 2.3],\n",
-              "       [1. , 5. , 1.9],\n",
-              "       [1. , 5.2, 2. ],\n",
-              "       [1. , 5.4, 2.3],\n",
-              "       [1. , 5.1, 1.8]])"
+              "array([0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
+              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605])"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -673,7 +596,7 @@
       "metadata": {
         "id": "tBLryApsbatR"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -692,12 +615,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# Write your code here\n",
+        "def gradient_calc(teta, X, y):\n",
+        "    return np.mean((predict(X, teta)-y)*X )"
       ],
       "metadata": {
         "id": "BtnANN5WvVuy"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -726,12 +651,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# Write your code here\n",
+        "def logistic_regression(X_train, y_train, X_valid, y_valid, n_iter, teta, eta):\n",
+        "    for i in range(n_iter):\n",
+        "      x_pred = predict(X_train, teta) #Generate set of predictions\n",
+        "      losses = log_loss(x_pred, y_train, epsilon=1e-7) #Calc and store loss function\n",
+        "      grad = gradient_calc(teta,X_train, y_train) # Gradient \n",
+        "      eta = teta- eta*grad# Update teta parameters\n",
+        "\n",
+        "    return teta, losses"
       ],
       "metadata": {
         "id": "HDsR5TxPt-0Y"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -785,7 +718,7 @@
       "metadata": {
         "id": "CVrXzjYA2iil"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
