--- a/S2_2_Training_Models.ipynb
+++ b/S2_2_Training_Models.ipynb
@@ -6,7 +6,6 @@
       "name": "Copie de S2_2_Training_Models.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,7 +154,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c6332f1-c00c-4f94-ac14-b53f7760e74f"
+        "outputId": "709b8394-ce38-4d39-cd23-4c016269e5d2"
       },
       "execution_count": 2,
       "outputs": [
@@ -294,7 +293,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "7431fe29-00b3-47b9-e377-eb7ae6851cfb"
+        "outputId": "388aa14f-a918-4c9b-f1b8-8c38f7f5c9ba"
       },
       "execution_count": 3,
       "outputs": [
@@ -340,45 +339,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d530f57-a0a6-4dbe-8cab-079ff0f7669d"
+        "outputId": "09e44fea-e9c0-49ff-bc4c-a3a0b070081b"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.77395605, 0.43887844, 0.85859792])"
+              "array([0.69736803, 0.09417735, 0.97562235])"
             ]
           },
           "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "teta[0]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FT3BdWhUzYlJ",
-        "outputId": "6996132e-cf64-403f-8432-fc4a547f15d6"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.7739560485559633"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
+          "execution_count": 11
         }
       ]
     },
@@ -432,7 +405,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from logging import log\n",
         "def log_loss(p_hat, y, epsilon=1e-7):\n",
         "  # Write your code here. \n",
         "  # We can also run into problems if p_hat = 0, so add an _epsilon_ term\n",
@@ -445,12 +417,12 @@
         "  assert J.shape == p_hat\n",
         "  assert J.shape == y\n",
         "\n",
-        "  return"
+        "  return (J.shape, p_hat, y)"
       ],
       "metadata": {
         "id": "H5fDeL36EauO"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -538,65 +510,28 @@
       "cell_type": "code",
       "source": [
         "# Prepare the X_with_bias matrix\n",
-        "X_with_bias = np.insert(bin_X,0,1,axis=1)\n",
-        "X_with_bias\n",
-        "\n",
-        "teta[0]*X_with_bias[:,0]"
+        "X_with_bias = np.c_[np.ones([len(bin_X), 1]), bin_X]"
       ],
       "metadata": {
-        "id": "3b2oOJ5WKn5m",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "956b8c26-3d14-44e7-8ec2-3d9426cf3d40"
+        "id": "3b2oOJ5WKn5m"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605,\n",
-              "       0.77395605, 0.77395605, 0.77395605, 0.77395605, 0.77395605])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Write your function predict here\n",
-        "def predict(X_with_bias,teta):\n",
-        "    # Calculate array of t\n",
-        "    t = nb.array(teta[0]*X_with_bias[0] + teta[1]*X_with_bias[1]+teta[2]*X_with_bias[2])\n",
-        "    # Calculate logistic function\n",
-        "    logistic(t)"
+        "def predict(teta, X_with_bias):\n",
+        "  tn = teta[0] + teta[1] * X_with_bias[:,1] + teta[2] * X_with_bias[:, 2]\n",
+        "  sigma = 1/(1 + np.exp(-t))\n",
+        "  \n",
+        "  return sigma"
       ],
       "metadata": {
         "id": "tBLryApsbatR"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -616,13 +551,13 @@
       "cell_type": "code",
       "source": [
         "# Write your code here\n",
-        "def gradient_calc(teta, X, y):\n",
-        "    return np.mean((predict(X, teta)-y)*X )"
+        "def gradient_calc(p_hat, X, y, k):\n",
+        "    return np.mean((p_hat**k) - y) * X"
       ],
       "metadata": {
         "id": "BtnANN5WvVuy"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -651,20 +586,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here\n",
-        "def logistic_regression(X_train, y_train, X_valid, y_valid, n_iter, teta, eta):\n",
-        "    for i in range(n_iter):\n",
-        "      x_pred = predict(X_train, teta) #Generate set of predictions\n",
-        "      losses = log_loss(x_pred, y_train, epsilon=1e-7) #Calc and store loss function\n",
-        "      grad = gradient_calc(teta,X_train, y_train) # Gradient \n",
-        "      eta = teta- eta*grad# Update teta parameters\n",
-        "\n",
-        "    return teta, losses"
+        "# Write your code here\n"
       ],
       "metadata": {
         "id": "HDsR5TxPt-0Y"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +645,7 @@
       "metadata": {
         "id": "CVrXzjYA2iil"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
