S3_3 Exercise almost completetd

--- a/S3_3_Ensemble_Learning_Random_Forests.ipynb
+++ b/S3_3_Ensemble_Learning_Random_Forests.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "LG202nlSAdEt"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "kQ7n6SQuAvc-"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,23 +88,26 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import the necessary functions and utilities"
+        "# Import the necessary functions and utilities\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "metadata": {
         "id": "ghURb2XNC1RI"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Split the MNIST data into training, validation, and test"
+        "# Split the MNIST data into training, validation, and test\n",
+        "X_train, X_test, y_train, y_test = train_test_split(mnist.data, mnist.target, test_size=10000, train_size=50000)\n",
+        "X_test, X_valid, y_test, y_valid = train_test_split(X_train, y_train, test_size=10000, train_size=10000)"
       ],
       "metadata": {
         "id": "8vcomcH2C6kI"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -121,35 +124,76 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import all the classifiers you need"
+        "# Import all the classifiers you need\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import confusion_matrix"
       ],
       "metadata": {
         "id": "OgJaMxU9Gtmy"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Train all the classifiers you imported on the *training* set"
+        "# Train all the classifiers you imported on the *training* set\n",
+        "rfc = RandomForestClassifier()\n",
+        "rfc.fit(X_train, y_train)\n",
+        "\n",
+        "etc = ExtraTreesClassifier()\n",
+        "etc.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "wjCaCtDiGv1A"
+        "id": "wjCaCtDiGv1A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bdfc77e-6b49-4f92-88ba-a24d2b11919c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ExtraTreesClassifier()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Compare their accuracy on the *validation* set"
+        "# Compare their accuracy on the *validation* set\n",
+        "rfc_valid = rfc.predict(X_valid)\n",
+        "etc_valid = etc.predict(X_valid)\n",
+        "print(accuracy_score(y_valid, rfc_valid))\n",
+        "print(accuracy_score(y_valid, etc_valid))"
       ],
       "metadata": {
-        "id": "q5aOFZcyGzdR"
+        "id": "q5aOFZcyGzdR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9b61f8c-f320-491f-826e-b494367216d5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n",
+            "1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -174,58 +218,97 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import all the classes and functions you need"
+        "# Import all the classes and functions you need\n",
+        "from sklearn.ensemble import VotingClassifier"
       ],
       "metadata": {
         "id": "wHSz59irJvmj"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Define your voting classifier here"
+        "# Define your voting classifier here\n",
+        "VCHard = VotingClassifier(estimators=[('RFC',rfc), ('ETC',etc)], voting='hard')\n",
+        "VCSoft = VotingClassifier(estimators=[('RFC',rfc), ('ETC',etc)], voting='soft')"
       ],
       "metadata": {
         "id": "CtFMbHkDJyvG"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Train two voting classifiers with hard and soft voting"
+        "# Train two voting classifiers with hard and soft voting\n",
+        "VCHard.fit(X_train, y_train)\n",
+        "VCSoft.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "6KP32aHdJ4oy"
+        "id": "6KP32aHdJ4oy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d9a2b9a-4e0b-4793-ecfe-8545d7148dee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "VotingClassifier(estimators=[('RFC', RandomForestClassifier()),\n",
+              "                             ('ETC', ExtraTreesClassifier())],\n",
+              "                 voting='soft')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Calculate their mean accuracy on the validation set \n",
-        "# (e.g., via the `score` attribute)"
+        "# (e.g., via the `score` attribute)\n",
+        "Hard_valid = VCHard.predict(X_valid)\n",
+        "Soft_valid = VCSoft.predict(X_valid)"
       ],
       "metadata": {
         "id": "n_ZnWI0GWlGC"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Compare it to the accuracy of individual classifiers"
+        "# Compare it to the accuracy of individual classifiers\n",
+        "print(accuracy_score(y_valid,Hard_valid))\n",
+        "print(accuracy_score(y_valid,Soft_valid))"
       ],
       "metadata": {
-        "id": "RbfEORxFXHTJ"
+        "id": "RbfEORxFXHTJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f052b987-63e2-4be6-fe9d-9921dd3d0dd2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n",
+            "1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
