S3_3 Exercise fully completed

--- a/S3_3_Ensemble_Learning_Random_Forests.ipynb
+++ b/S3_3_Ensemble_Learning_Random_Forests.ipynb
@@ -151,7 +151,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bdfc77e-6b49-4f92-88ba-a24d2b11919c"
+        "outputId": "e4ccf2f8-b63e-447d-ef67-adcf83172284"
       },
       "execution_count": 6,
       "outputs": [
@@ -181,7 +181,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9b61f8c-f320-491f-826e-b494367216d5"
+        "outputId": "f4c3c56a-cf24-4292-e696-03ab4d62a6a6"
       },
       "execution_count": 7,
       "outputs": [
@@ -252,7 +252,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5d9a2b9a-4e0b-4793-ecfe-8545d7148dee"
+        "outputId": "16ca5da3-dc92-4afa-b432-360a66258604"
       },
       "execution_count": 10,
       "outputs": [
@@ -296,7 +296,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f052b987-63e2-4be6-fe9d-9921dd3d0dd2"
+        "outputId": "29cf23e6-c969-4255-dcc6-61fc17443998"
       },
       "execution_count": 12,
       "outputs": [
@@ -352,13 +352,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calculate the mean accuracy of the ensemble on the test set"
+        "# Calculate the mean accuracy of the ensemble on the test set\n",
+        "pred_hard = VCHard.predict(X_test)\n",
+        "pred_soft = VCSoft.predict(X_test)\n",
+        "\n",
+        "acc1 = accuracy_score(y_test, pred_hard)\n",
+        "print(f'The accuracy of test is {acc1:.1%}')\n",
+        "\n",
+        "acc2 = accuracy_score(y_test, pred_soft)\n",
+        "print(f'The accuracy of test is {acc2:.1%}')"
       ],
       "metadata": {
-        "id": "wHzcCAtbXqk0"
+        "id": "wHzcCAtbXqk0",
+        "outputId": "8d6e5f4d-221c-469f-a17d-09b2f05688a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The accuracy of test is 100.0%\n",
+            "The accuracy of test is 100.0%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
